# home-voice-assistant

./: .env  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.bak.fix_defs  CMakeLists.txt.bak.httpfix  Makefile  README.md  home_assistant  model  ptt_ai.py  run_assistant.sh  run_http_smoke.sh  write_main_and_push_04b.sh
captures/: vad_segments.json
config/: app.env
include/: AsrVosk.h  Audio.h  Env.h  HttpServer.h  Memory.h  OpenAIClient.h  TtsPiper.h  Utils.h  Vad.h
scripts/: assistant_talker.sh  ptt_vosk.sh  run_asr_offline.sh  run_audio_offline.sh  run_audio_vosk_piper.sh  run_bt_list_devices.sh  run_http_smoke.sh  run_loop_smoke.sh  run_memory_smoke.sh  run_offline.sh  run_online_ollama.sh  run_online_opengptoss.sh  run_ptt_basic.sh  run_ptt_test.sh  run_text_offline.sh  run_tts_smoke.sh  run_vad_offline.sh  run_ws_note_demo.sh  say_any.sh  test_audio_io.sh  voice.sh
src/: AsrVosk.cpp  Audio.cpp  Env.cpp  HttpServer.cpp  Memory.cpp  Memory.cpp.bak.fsfix  OpenAIClient.cpp  TtsPiper.cpp  Utils.cpp  Vad.cpp  main.cpp  main.cpp.bak  main.cpp.bak.fsfix
